--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -4,27 +4,32 @@
   font-family: 'MyriadPro-Black';
   src: local('MyriadPro-Black'),
     url('/fonts/MyriadPro/MyriadPro-Black.ttf') format('truetype');
+  font-display: swap;
 }
 @font-face {
   font-family: 'MyriadPro-Bold';
   src: local('MyriadPro-Bold'),
     url('/fonts/MyriadPro/MyriadPro-Bold.ttf') format('truetype');
+  font-display: swap;
 }
 @font-face {
   font-family: 'MyriadPro-Regular';
   src: local('MyriadPro-Regular'),
     url('/fonts/MyriadPro/MyriadPro-Regular.ttf') format('truetype');
+  font-display: swap;
 }
 @font-face {
   font-family: 'MyriadPro-Semibold';
   src: local('MyriadPro-Semibold'),
     url('/fonts/MyriadPro/MyriadPro-Semibold.ttf') format('truetype');
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'MyriadPro-Light';
   src: local('MyriadPro-Light'),
     url('/fonts/MyriadPro/MyriadPro-Light.ttf') format('truetype');
+  font-display: swap;
 }
 
 /* //* HelveticaNeueCyr */
@@ -33,22 +38,26 @@
   font-family: 'HelveticaNeueCyr-Black';
   src: local('HelveticaNeueCyr-Black'),
     url('/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Black.ttf') format('truetype');
+  font-display: swap;
 }
 @font-face {
   font-family: 'HelveticaNeueCyr-Bold';
   src: local('HelveticaNeueCyr-Bold'),
     url('/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Bold.ttf') format('truetype');
+  font-display: swap;
 }
 @font-face {
   font-family: 'HelveticaNeueCyr-Light';
   src: local('HelveticaNeueCyr-Light'),
     url('/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Light.ttf') format('truetype');
+  font-display: swap;
 }
 @font-face {
   font-family: 'HelveticaNeueCyr-Medium';
   src: local('HelveticaNeueCyr-Medium'),
     url('/fonts/HelveticaNeueCyr/HelveticaNeueCyr-Medium.ttf')
       format('truetype');
+  font-display: swap;
 }
 
 /* //* Pragmatica */
@@ -57,19 +66,23 @@
   font-family: 'Pragmatica-Medium';
   src: local('Pragmatica-Medium'),
     url('/fonts/Pragmatica/Pragmatica-Medium.ttf') format('truetype');
+  font-display: swap;
 }
 @font-face {
   font-family: 'Pragmatica-Black';
   src: local('Pragmatica-Black'),
     url('/fonts/Pragmatica/Pragmatica-Black.ttf') format('truetype');
+  font-display: swap;
 }
 @font-face {
   font-family: 'Pragmatica-Bold';
   src: local('Pragmatica-Bold'),
     url('/fonts/Pragmatica/Pragmatica-Bold.ttf') format('truetype');
+  font-display: swap;
 }
 @font-face {
   font-family: 'Pragmatica-Light';
   src: local('Pragmatica-Light'),
     url('/fonts/Pragmatica/Pragmatica-Light.ttf') format('truetype');
+  font-display: swap;
 }
